[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/Global/BulletPatterns/PatternProperty.gd" type="Script" id=1]

[node name="Property" type="HBoxContainer"]
margin_right = 256.0
margin_bottom = 16.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 5

[node name="HSlider" type="HSlider" parent="."]
margin_left = 104.0
margin_right = 212.0
margin_bottom = 16.0
size_flags_horizontal = 3
step = 0.1

[node name="CheckBox" type="CheckButton" parent="."]
visible = false
margin_left = 136.0
margin_right = 212.0
margin_bottom = 40.0

[node name="Value" type="Label" parent="."]
margin_left = 216.0
margin_top = 1.0
margin_right = 256.0
margin_bottom = 15.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 5
align = 2

[connection signal="value_changed" from="HSlider" to="." method="_on_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_value_changed"]
